--- a/src/_sass/global/core/resets.sass
+++ b/src/_sass/global/core/resets.sass
@@ -2,8 +2,9 @@
   box-sizing: border-box
   margin: 0px
   padding: 0px
+  outline: none
 
-button, input[type="button"]
+button, input[type="button"], input
   border: none
   background: transparent
   &:focus
