--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,12 +1,13 @@
 * {
   box-sizing: border-box;
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+  outline: none; }
 
-button, input[type="button"] {
+button, input[type="button"], input {
   border: none;
   background: transparent; }
-  button:focus, input[type="button"]:focus {
+  button:focus, input[type="button"]:focus, input:focus {
     outline: none; }
 
 a {
