--- a/src/_sass/global/core/layout.sass
+++ b/src/_sass/global/core/layout.sass
@@ -1,9 +1,9 @@
 $baseline-grid:            8px !default
 $layout-gutter-width:      ($baseline-grid * 2) !default
-$layout-breakpoint-xs:     600px !default
-$layout-breakpoint-sm:     960px !default
-$layout-breakpoint-md:     1280px !default
-$layout-breakpoint-lg:     1920px !default
+$layout-breakpoint-xs:     $breakpoint-xs !default
+$layout-breakpoint-sm:     $breakpoint-sm !default
+$layout-breakpoint-md:     $breakpoint-md !default
+$layout-breakpoint-lg:     $breakpoint-lg !default
 
 
 // mixin definition  sets LTR and RTL within the same style call
