--- a/src/_sass/global/core/resets.sass
+++ b/src/_sass/global/core/resets.sass
@@ -2,7 +2,11 @@
   box-sizing: border-box
   margin: 0px
   padding: 0px
+  text-alignment: left
+  // eliminate focus glow on :active on some browsers
+*:focus
   outline: none
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px inset
 
 button, input[type="button"], input
   border: none
@@ -12,3 +16,10 @@ button, input[type="button"], input
 
 a
   text-decoration: none
+
+html, body
+  min-width: var(--breakpoint-min)
+  width: 100%
+
+ul, ol
+  list-style-type: none
