--- a/src/_sass/global/variables/typography.sass
+++ b/src/_sass/global/variables/typography.sass
@@ -1,3 +1,4 @@
+// base font sizes
 
 $font-xxl: 28px
 $font-xl: 24px
@@ -5,3 +6,30 @@ $font-l: 20px
 $font-m: 18px
 $font-s: 14px
 $font-xs: 11px
+
+// use for margins and padding
+
+$text-spacing-xxl: 28px
+$text-spacing-xl: 24px
+$text-spacing-l: 20px
+$text-spacing-m: 18px
+$text-spacing-s: 14px
+$text-spacing-xs: 11px
+
+$font-bold: bold
+$font-normal: normal
+
+$font-family-primary: NunitoSans
+$font-family-primary-bold: NunitoSans
+$font-family-primary-src: "/fonts/NunitoSans-Regular.ttf"
+$font-family-primary-bold-src: "/fonts/NunitoSans-Bold.ttf"
+
+$font-family-secondary: NunitoSans
+$font-family-secondary-bold: NunitoSans
+$font-family-secondary-src: "/fonts/NunitoSans-Regular.ttf"
+$font-family-secondary-bold-src: "/fonts/NunitoSans-Bold.ttf"
+
+$font-family-monospace: Cascadia
+$font-family-monospace-bold: Cascadia
+$font-family-monospace-src: "/fonts/Cascadia.ttf"
+$font-family-monospace-bold-src: "/fonts/Cascadia.ttf"
