--- a/src/_sass/global/core/css_variables.sass
+++ b/src/_sass/global/core/css_variables.sass
@@ -61,6 +61,7 @@
   --critical-hover: #{$critical-hover}
   --critical-active: #{$critical-active}
   --critical-disabled: #{$critical-disabled}
+  --code: #{$primary}
   --primary: #{$primary}
   --primary-hover: #{$primary-hover}
   --primary-active: #{$primary-active}
