--- a/src/_sass/global/core/resets.sass
+++ b/src/_sass/global/core/resets.sass
@@ -2,7 +2,8 @@
   box-sizing: border-box
   margin: 0px
   padding: 0px
-  text-alignment: left
+  text-align: left
+  font-weight: normal
   // eliminate focus glow on :active on some browsers
 *:focus
   outline: none
@@ -23,3 +24,7 @@ html, body
 
 ul, ol
   list-style-type: none
+
+table
+  border-spacing: 0
+  border-collapse: collapse
