--- a/src/_sass/global/variables/typography.sass
+++ b/src/_sass/global/variables/typography.sass
@@ -9,7 +9,7 @@ $font-xs: 11px
 
 // use for margins and padding
 
-$text-spacing-xxl: 28px
+$text-spacing-xxl: 28px // roughly equivalent to two lines
 $text-spacing-xl: 24px
 $text-spacing-l: 20px
 $text-spacing-m: 18px
