--- a/src/_sass/global/common/typography.sass
+++ b/src/_sass/global/common/typography.sass
@@ -6,7 +6,27 @@
 @font-face
   font-family: $font-family-primary-bold
   src: url($font-family-primary-bold-src)
+  font-weight: $font-bold
+
+@font-face
+  font-family: $font-family-secondary
+  src: url($font-family-secondary-src)
   font-weight: $font-normal
+
+@font-face
+  font-family: $font-family-secondary-bold
+  src: url($font-family-secondary-bold-src)
+  font-weight: $font-bold
+
+@font-face
+  font-family: $font-family-monospace
+  src: url($font-family-monospace-src)
+  font-weight: $font-normal
+
+@font-face
+  font-family: $font-family-monospace-bold
+  src: url($font-family-monospace-bold-src)
+  font-weight: $font-bold
 
 body
   font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
@@ -31,29 +51,79 @@ p
   font-size: var(--font-s)
 small
   font-size: var(--font-xs)
-
-
+pre, code
+  font-family: var(--font-family-monospace), "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace
+  font-size: var(--font-s)
+  color: var(--code)
 
 // encapsulate "body" text in articles
 
-// todo: ul/ol aside
+
 
 article, .article
 
   h1
+    margin-top: var(--text-spacing-xxl)
     margin-bottom: var(--text-spacing-xxl)
   h2
+    margin-top: var(--text-spacing-xxl)
     margin-bottom: var(--text-spacing-xl)
   h3
+    margin-top: var(--text-spacing-xxl)
     margin-bottom: var(--text-spacing-l)
   h4
+    margin-top: var(--text-spacing-xxl)
     margin-bottom: var(--text-spacing-m)
   h5
+    margin-top: var(--text-spacing-xxl)
     margin-bottom: var(--text-spacing-s)
   h6
+    margin-top: var(--text-spacing-xxl)
     margin-bottom: var(--text-spacing-xs)
-  p
+  p, ol, ul, table, pre
     margin-bottom: var(--text-spacing-s)
+
+  pre
+    background: var(--lightest-gray)
+    padding: var(--text-spacing-s)
+
+  ul
+    list-style-type: disc
+    ul
+      list-style-type: square
+      ul
+        list-style-type: circle
+        ul
+          list-style-type: square
+          ul
+            list-style-type: disc
+            ul
+              list-style-type: square
+              ul
+                list-style-type: circle
+    li
+      margin-left: 20px
+
+  ol
+    list-style-type: decimal
+    ol
+      list-style-type: upper-alpha
+      ol
+        list-style-type: upper-roman
+        ol
+          list-style-type: lower-alpha
+          ol
+            list-style-type: lower-roman
+            ol
+              list-style-type: decimal
+    li
+      margin-left: 20px
+
+  table
+    th
+      font-weight: bold
+    td, th
+      padding: 2px 6px
 
 // general formats
 
