Global css fine tune

--- a/src/_sass/global/common/buttons.sass
+++ b/src/_sass/global/common/buttons.sass
@@ -1,6 +1,15 @@
+input
+  &[type="radio"], &[type="checkbox"]
+    width: auto
+    top: 2px
+    position: relative
+    margin-right: var(--fine-spacing-m)
+
+// standard
 button, input
 
   &[type="button"]
+    width: auto
     padding: 6px 12px
     background-color: var(--lighter-gray)
     color: var(--black)
