--- a/src/_sass/global/css_variables.sass
+++ b/src/_sass/global/css_variables.sass
@@ -57,13 +57,13 @@
 
 
   // these build on existing colors
-  --box-shadow: --var(--light-gray)
+  --box-shadow: var(--light-gray)
 
   // state colors
-  --critical: --var(--dark-red)
-  --critical-hover: --var(--red)
-  --critical-active: --var(--darkest-red)
-  --critical-disabled: --var(--light-red)
+  --critical: var(--dark-red)
+  --critical-hover: var(--red)
+  --critical-active: var(--darkest-red)
+  --critical-disabled: var(--light-red)
 
   --primary: var(--blue)
   --primary-hover: var(--dark-blue)
