--- a/src/_sass/global/common/form.sass
+++ b/src/_sass/global/common/form.sass
@@ -1,77 +1,16 @@
 
 
-input
+//  todo: validation states
 
-
-
-// buttons
-
-button, input
-
-  &[type="button"]
-    padding: 6px 12px
-    background-color: var(--lighter-gray)
-    color: var(--black)
-    border-radius: 4px
-    &:hover
-      background-color: var(--lightest-gray)
-    &:active, &:focus
-      background-color: var(--gray)
-    &[disabled="true"], &[disabled="true"]:hover, &[disabled="true"]:focus, &[disabled="true"]:active
-      background: var(--lightest-gray)
-      color: var(--light-gray)
-
-    &[critical], &[state="critical"]
-      background-color: var(--critical)
-      color: var(--white)
-      &:hover
-        background-color: var(--critical-hover)
-
-
-      &:active, &:focus
-        background-color: var(--critical-active)
-      &[disabled="true"], &[disabled="true"]:hover, &[disabled="true"]:focus, &[disabled="true"]:active
-        background-color: var(--critical-disabled)
-        color: var(--dark-gray)
-    &[primary], &[state="primary"]
-      background-color: var(--primary)
-      color: var(--white)
-      &:hover
-        background-color: var(--primary-hover)
-      &:active, &:focus
-        background-color: var(--primary-active)
-      &[disabled="true"], &[disabled="true"]:hover, &[disabled="true"]:focus, &[disabled="true"]:active
-        background-color: var(--primary-disabled)
-        color: var(--dark-gray)
-
-    &[icon]
-      padding: 0px
-      background-color: transparent
-      @include icon-color(var(--icon-color-normal))
-
-      &:hover, &:active, &:focus, &[disabled="true"], &[disabled="true"]:hover, &[disabled="true"]:focus, &[disabled="true"]:active
-        background-color: transparent
-
-      &[critical], &[state="critical"]
-        @include icon-color(var(--icon-color-critical))
-        &:hover
-          @include icon-color(var(--icon-color-critical-hover))
-        &:focus, &:active
-          @include icon-color(var(--icon-color-critical-active))
-        &[disabled="true"], &[disabled="true"]:hover, &[disabled="true"]:focus, &[disabled="true"]:active
-          @include icon-color(var(--icon-color-critical-disabled))
-
-      &[primary], &[state="primary"]
-        @include icon-color(var(--icon-color-primary))
-        &:hover
-          @include icon-color(var(--icon-color-primary-hover))
-        &:focus, &:active
-          @include icon-color(var(--icon-color-primary-active))
-        &[disabled="true"], &[disabled="true"]:hover, &[disabled="true"]:focus, &[disabled="true"]:active
-          @include icon-color(var(--icon-color-primary-disabled))
-
-      &:hover
-        @include icon-color(var(--icon-color-normal-hover))
-
-      &:focus, &:active
-        @include icon-color(var(--icon-color-normal-active))
+textarea, input
+  font-family:
+  border-radius: var(--corner-s)
+  padding: 4px 8px
+  border: 1px solid var(--light-gray)
+  font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+  font-size: var(--font-s)
+  width: 100%
+  &[required], &[invalid="true"]
+    border-color: var(--critical)
+  &[disabled]
+    color: var(--dark-gray)
