--- a/src/_sass/global/core/resets.sass
+++ b/src/_sass/global/core/resets.sass
@@ -4,10 +4,14 @@
   padding: 0px
   text-align: left
   font-weight: normal
+  border-radius: 0px
   // eliminate focus glow on :active on some browsers
 *:focus
   outline: none
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px inset
+
+div
+  position: relative
 
 button, input[type="button"], input
   border: none
