--- a/src/_sass/global/common/typography.sass
+++ b/src/_sass/global/common/typography.sass
@@ -27,8 +27,8 @@ pre, code
   color: var(--code)
 
 
-// encapsulate "body" text in articles
-article, .article
+// encapsulate "body" text in content type articles
+[type="content"], .content
 
   h1
     margin-top: var(--text-spacing-xxl)
