--- a/public/css/global.css
+++ b/public/css/global.css
@@ -9597,77 +9597,77 @@ pre, code {
   font-size: var(--font-s);
   color: var(--code); }
 
-article h1, .article h1 {
+[type="content"] h1, .content h1 {
   margin-top: var(--text-spacing-xxl);
   margin-bottom: var(--text-spacing-xxl); }
 
-article h2, .article h2 {
+[type="content"] h2, .content h2 {
   margin-top: var(--text-spacing-xxl);
   margin-bottom: var(--text-spacing-xl); }
 
-article h3, .article h3 {
+[type="content"] h3, .content h3 {
   margin-top: var(--text-spacing-xxl);
   margin-bottom: var(--text-spacing-l); }
 
-article h4, .article h4 {
+[type="content"] h4, .content h4 {
   margin-top: var(--text-spacing-xxl);
   margin-bottom: var(--text-spacing-m); }
 
-article h5, .article h5 {
+[type="content"] h5, .content h5 {
   margin-top: var(--text-spacing-xxl);
   margin-bottom: var(--text-spacing-s); }
 
-article h6, .article h6 {
+[type="content"] h6, .content h6 {
   margin-top: var(--text-spacing-xxl);
   margin-bottom: var(--text-spacing-xs); }
 
-article p, article ol, article ul, article table, article pre, article blockquote, .article p, .article ol, .article ul, .article table, .article pre, .article blockquote {
+[type="content"] p, [type="content"] ol, [type="content"] ul, [type="content"] table, [type="content"] pre, [type="content"] blockquote, .content p, .content ol, .content ul, .content table, .content pre, .content blockquote {
   margin-bottom: var(--text-spacing-s); }
 
-article blockquote, .article blockquote {
+[type="content"] blockquote, .content blockquote {
   margin-left: var(--spacing-l);
   margin-right: var(--spacing-l); }
 
-article pre, .article pre {
+[type="content"] pre, .content pre {
   background: var(--lightest-gray);
   padding: var(--text-spacing-s); }
 
-article ul, .article ul {
+[type="content"] ul, .content ul {
   list-style-type: disc; }
-  article ul ul, .article ul ul {
+  [type="content"] ul ul, .content ul ul {
     list-style-type: square; }
-    article ul ul ul, .article ul ul ul {
+    [type="content"] ul ul ul, .content ul ul ul {
       list-style-type: circle; }
-      article ul ul ul ul, .article ul ul ul ul {
+      [type="content"] ul ul ul ul, .content ul ul ul ul {
         list-style-type: square; }
-        article ul ul ul ul ul, .article ul ul ul ul ul {
+        [type="content"] ul ul ul ul ul, .content ul ul ul ul ul {
           list-style-type: disc; }
-          article ul ul ul ul ul ul, .article ul ul ul ul ul ul {
+          [type="content"] ul ul ul ul ul ul, .content ul ul ul ul ul ul {
             list-style-type: square; }
-            article ul ul ul ul ul ul ul, .article ul ul ul ul ul ul ul {
+            [type="content"] ul ul ul ul ul ul ul, .content ul ul ul ul ul ul ul {
               list-style-type: circle; }
-  article ul li, .article ul li {
+  [type="content"] ul li, .content ul li {
     margin-left: var(--spacing-xs); }
 
-article ol, .article ol {
+[type="content"] ol, .content ol {
   list-style-type: decimal; }
-  article ol ol, .article ol ol {
+  [type="content"] ol ol, .content ol ol {
     list-style-type: upper-alpha; }
-    article ol ol ol, .article ol ol ol {
+    [type="content"] ol ol ol, .content ol ol ol {
       list-style-type: upper-roman; }
-      article ol ol ol ol, .article ol ol ol ol {
+      [type="content"] ol ol ol ol, .content ol ol ol ol {
         list-style-type: lower-alpha; }
-        article ol ol ol ol ol, .article ol ol ol ol ol {
+        [type="content"] ol ol ol ol ol, .content ol ol ol ol ol {
           list-style-type: lower-roman; }
-          article ol ol ol ol ol ol, .article ol ol ol ol ol ol {
+          [type="content"] ol ol ol ol ol ol, .content ol ol ol ol ol ol {
             list-style-type: decimal; }
-  article ol li, .article ol li {
+  [type="content"] ol li, .content ol li {
     margin-left: var(--spacing-s); }
 
-article table th, .article table th {
+[type="content"] table th, .content table th {
   font-weight: bold; }
 
-article table td, article table th, .article table td, .article table th {
+[type="content"] table td, [type="content"] table th, .content table td, .content table th {
   padding: var(--fine-spacing-xxs) var(--fine-spacing-s); }
 
 [ellipsis] {
@@ -9722,7 +9722,7 @@ article table td, article table th, .article table td, .article table th {
 
 textarea, input {
   border-radius: var(--corner-s);
-  padding: 4px 8px;
+  padding: var(--fine-spacing-xs) var(--fine-spacing-m);
   border: 1px solid var(--light-gray);
   font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: var(--font-s);
