--- a/src/_sass/global/common/form.sass
+++ b/src/_sass/global/common/form.sass
@@ -5,7 +5,7 @@
 textarea, input
   font-family:
   border-radius: var(--corner-s)
-  padding: 4px 8px
+  padding: var(--fine-spacing-xs) var(--fine-spacing-m)
   border: 1px solid var(--light-gray)
   font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
   font-size: var(--font-s)
