--- a/public/css/global.css
+++ b/public/css/global.css
@@ -24,7 +24,8 @@ a {
 
 html, body {
   min-width: var(--breakpoint-min);
-  width: 100%; }
+  width: 100%;
+  height: 100%; }
 
 ul, ol {
   list-style-type: none; }
