Doc and cleanup

--- a/src/_sass/global.sass
+++ b/src/_sass/global.sass
@@ -22,6 +22,7 @@
 @import "global/common/form.sass"
 @import "global/common/buttons.sass" // always load after form
 @import "global/common/table.sass"
+@import "global/common/labels.sass"
 
 // finally
 @import "global/css_variables.sass"
