--- a/src/_sass/global/common/buttons.sass
+++ b/src/_sass/global/common/buttons.sass
@@ -6,8 +6,9 @@ input
     margin-right: var(--fine-spacing-m)
 
 // standard
-button, input
 
+button, input
+  font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
   &[type="button"]
     width: auto
     padding: 6px 12px
