--- a/src/_sass/global/common/form.sass
+++ b/src/_sass/global/common/form.sass
@@ -5,7 +5,7 @@
 textarea, input
   font-family:
   border-radius: var(--corner-s)
-  padding: var(--fine-spacing-xs) var(--fine-spacing-m)
+  padding: var(--fine-spacing-s) var(--fine-spacing-m)
   border: 1px solid var(--light-gray)
   font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
   font-size: var(--font-s)
@@ -14,3 +14,9 @@ textarea, input
     border-color: var(--critical)
   &[disabled]
     color: var(--dark-gray)
+
+field
+  display: block
+  margin: var(--fine-spacing-l) 0px
+
+  
