--- a/public/css/global.css
+++ b/public/css/global.css
@@ -22,6 +22,9 @@ button, input[type="button"], input {
 a {
   text-decoration: none; }
 
+a, a:hover, a:visited, a:active {
+  color: var(--black); }
+
 html, body {
   min-width: var(--breakpoint-min);
   width: 100%;
