--- a/src/_sass/global/core/resets.sass
+++ b/src/_sass/global/core/resets.sass
@@ -21,12 +21,15 @@ button, input[type="button"], input
 
 a
   text-decoration: none
+a, a:hover, a:visited, a:active
+  color: var(--black)
+
 
 html, body
   min-width: var(--breakpoint-min)
   width: 100%
   height: 100%
-  
+
 ul, ol
   list-style-type: none
 
