Clean up several controls

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -8922,6 +8922,21 @@ table {
 [show="false!"], [hide="true!"] {
   display: none !important; }
 
+[type="overlay"] {
+  display: none;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: var(--z-index-overlay);
+  top: 0;
+  left: 0;
+  background-color: var(--overlay);
+  opacity: var(--overlay-opacity); }
+  [type="overlay"][clear] {
+    background-color: transparent; }
+  [type="overlay"][open="true"] {
+    display: block; }
+
 [c*="v"] {
   position: relative;
   top: 50%;
@@ -9634,7 +9649,8 @@ pre, code {
 
 [type="content"] pre, .content pre {
   background: var(--lightest-gray);
-  padding: var(--text-spacing-s); }
+  padding: var(--text-spacing-s);
+  border-radius: var(--corner-l); }
 
 [type="content"] ul, .content ul {
   list-style-type: disc; }
@@ -9724,17 +9740,20 @@ pre, code {
 .zerofont {
   font-size: 0px; }
 
-textarea, input {
+textarea, input, select, button[type="select"] {
   border-radius: var(--corner-s);
   padding: var(--fine-spacing-s) var(--fine-spacing-m);
-  border: 1px solid var(--light-gray);
+  border: 1px solid var(--input-border);
   font-family: var(--font-family-primary), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: var(--font-s);
   width: 100%; }
-  textarea[required], textarea[invalid="true"], input[required], input[invalid="true"] {
+  textarea[required], textarea[invalid="true"], input[required], input[invalid="true"], select[required], select[invalid="true"], button[type="select"][required], button[type="select"][invalid="true"] {
     border-color: var(--critical); }
-  textarea[disabled], input[disabled] {
+  textarea[disabled], input[disabled], select[disabled], button[type="select"][disabled] {
     color: var(--dark-gray); }
+  textarea option, input option, select option, button[type="select"] option {
+    padding: var(--fine-spacing-s) var(--fine-spacing-m);
+    font-size: var(--font-s); }
 
 field {
   display: block;
@@ -9939,7 +9958,18 @@ label[type="tag"] {
   --darkest-red: #c92a2a;
   --black: #212529;
   --white: #ffffff;
+  --input-border: var(--light-gray);
+  --menu-border: var(--light-gray);
   --box-shadow: var(--light-gray);
+  --tooltip-bg: var(--black);
+  --tooltip-bg-opacity: 1;
+  --tooltip-fg: var(--white);
+  --overlay: var(--black);
+  --overlay-opacity: 0.25;
+  --z-index-overlay: 9;
+  --z-index-menu: 10;
+  --z-index-tooltip: 90;
+  --z-index-modal: 1000;
   --critical: var(--dark-red);
   --critical-hover: var(--red);
   --critical-active: var(--darkest-red);
