--- a/src/_sass/global/common/typography.sass
+++ b/src/_sass/global/common/typography.sass
@@ -57,6 +57,7 @@ pre, code
   pre
     background: var(--lightest-gray)
     padding: var(--text-spacing-s)
+    border-radius: var(--corner-l)
 
   ul
     list-style-type: disc
