--- a/src/_sass/global/css_variables.sass
+++ b/src/_sass/global/css_variables.sass
@@ -91,7 +91,12 @@
 
   --code: var(--primary)
 
+
+
+  --icon-size: 24px
+
   // icon colors
+  
   --icon-color-normal: var(--black)
   --icon-color-normal-hover: var(--blue)
   --icon-color-normal-active: var(--darker-blue)
