--- a/src/_sass/global/common/buttons.sass
+++ b/src/_sass/global/common/buttons.sass
@@ -48,6 +48,7 @@ button, input
 
     &[icon]
       padding: 0px
+      font-size: 0px
       background-color: transparent
       @include icon-color(var(--icon-color-normal))
 
