--- a/src/_sass/global/common/labels.sass
+++ b/src/_sass/global/common/labels.sass
@@ -1,7 +1,7 @@
 // appears inside a text type of input on the right side
 // remember to add right padding on the input manually
 
-label[type="input"]
+label[type="translated-input"]
   position: absolute
   right: 0px
   top: 0px
