--- a/src/_sass/global/css_variables.sass
+++ b/src/_sass/global/css_variables.sass
@@ -92,11 +92,12 @@
   --code: var(--primary)
 
 
+  --padding-input-embedded-icon: 40px
 
   --icon-size: 24px
 
   // icon colors
-  
+
   --icon-color-normal: var(--black)
   --icon-color-normal-hover: var(--blue)
   --icon-color-normal-active: var(--darker-blue)
