--- a/src/_sass/global/common/labels.sass
+++ b/src/_sass/global/common/labels.sass
@@ -1,18 +1,3 @@
-// appears inside a text type of input on the right side
-// remember to add right padding on the input manually
-
-label[type="translated-input"]
-  position: absolute
-  right: 0px
-  top: 0px
-  margin-top: 7px
-  margin-right: 8px
-  padding: 2px 6px
-  font-size: var(--font-xs)
-  font-weight: var(--font-bold)
-  color: var(--white)
-  background: var(--blue)
-  border-radius: var(--corner-s)
 
 // used with form inputs
 label[type="field"]
@@ -26,6 +11,8 @@ label[type="field"]
 label[type="tag"]
   display: inline-block
   padding: 2px 6px
+  position: relative
+  top: -2px
   font-size: var(--font-xs)
   font-weight: var(--font-bold)
   color: var(--white)
