--- a/src/_sass/global/css_variables.sass
+++ b/src/_sass/global/css_variables.sass
@@ -3,57 +3,57 @@
 \:root
   // colors - these are defined in variables/colors.sass
   // colors.sass also prebuilds many shortcut attributes for /generated/colors.sass
-  --lightest-gray: #{$lightest-gray}
-  --lighter-gray: #{$lighter-gray}
-  --light-gray: #{$light-gray}
-  --gray: #{$gray}
-  --dark-gray: #{$dark-gray}
-  --darker-gray: #{$darker-gray}
-  --darkest-gray: #{$darkest-gray}
-  --lightest-purple: #{$lightest-purple}
-  --lighter-purple: #{$lighter-purple}
-  --light-purple: #{$light-purple}
-  --purple: #{$purple}
-  --dark-purple: #{$dark-purple}
-  --darker-purple: #{$darker-purple}
-  --darkest-purple: #{$darkest-purple}
-  --lightest-blue: #{$lightest-blue}
-  --lighter-blue: #{$lighter-blue}
-  --light-blue: #{$light-blue}
-  --blue: #{$blue}
-  --dark-blue: #{$dark-blue}
-  --darker-blue: #{$darker-blue}
-  --darkest-blue: #{$darkest-blue}
-  --lightest-green: #{$lightest-green}
-  --lighter-green: #{$lighter-green}
-  --light-green: #{$light-green}
-  --green: #{$green}
-  --dark-green: #{$dark-green}
-  --darker-green: #{$darker-green}
-  --darkest-green: #{$darkest-green}
-  --lightest-yellow: #{$lightest-yellow}
-  --lighter-yellow: #{$lighter-yellow}
-  --light-yellow: #{$light-yellow}
-  --yellow: #{$yellow}
-  --dark-yellow: #{$dark-yellow}
-  --darker-yellow: #{$darker-yellow}
-  --darkest-yellow: #{$darkest-yellow}
-  --lightest-orange: #{$lightest-orange}
-  --lighter-orange: #{$lighter-orange}
-  --light-orange: #{$light-orange}
-  --orange: #{$orange}
-  --dark-orange: #{$dark-orange}
-  --darker-orange: #{$darker-orange}
-  --darkest-orange: #{$darkest-orange}
-  --lightest-red: #{$lightest-red}
-  --lighter-red: #{$lighter-red}
-  --light-red: #{$light-red}
-  --red: #{$red}
-  --dark-red: #{$dark-red}
-  --darker-red: #{$darker-red}
-  --darkest-red: #{$darkest-red}
-  --black: #{$black}
-  --white: #{$white}
+  --lightest-gray: #dee2e6
+  --lighter-gray: #ced4da
+  --light-gray: #adb5bd
+  --gray: #868e96
+  --dark-gray: #495057
+  --darker-gray: #343a40
+  --darkest-gray: #212529
+  --lightest-purple: #e5dbff
+  --lighter-purple: #d0bfff
+  --light-purple: #b197fc
+  --purple: #9775fa
+  --dark-purple: #845ef7
+  --darker-purple: #7048e8
+  --darkest-purple: #5f3dc4
+  --lightest-blue: #dbe4ff
+  --lighter-blue: #bac8ff
+  --light-blue: #91a7ff
+  --blue: #5c7cfa
+  --dark-blue: #4c6ef5
+  --darker-blue: #3b5bdb
+  --darkest-blue: #364fc7
+  --lightest-green: #c3fae8
+  --lighter-green: #63e6be
+  --light-green: #20c997
+  --green: #12b886
+  --dark-green: #0ca678
+  --darker-green: #099268
+  --darkest-green: #087f5b
+  --lightest-yellow: #fff3bf
+  --lighter-yellow: #ffec99
+  --light-yellow: #ffe066
+  --yellow: #ffd43b
+  --dark-yellow: #fcc419
+  --darker-yellow: #fab005
+  --darkest-yellow: #f59f00
+  --lightest-orange: #ffe8cc
+  --lighter-orange: #ffc078
+  --light-orange: #ffa94d
+  --orange: #fd7e14
+  --dark-orange: #f76707
+  --darker-orange: #e8590c
+  --darkest-orange: #d9480f
+  --lightest-red: #ffe3e3
+  --lighter-red: #ffa8a8
+  --light-red: #ff8787
+  --red: #fa5252
+  --dark-red: #f03e3e
+  --darker-red: #e03131
+  --darkest-red: #c92a2a
+  --black: var(--darkest-gray)
+  --white: #ffffff
 
 
   // these build on existing colors
@@ -84,10 +84,26 @@
   --critical-active: var(--darkest-red)
   --critical-disabled: var(--light-red)
 
+  --warning: var(--dark-yellow)
+  --warning-hover: var(--yellow)
+  --warning-active: var(--darkest-yellow)
+  --warning-disabled: var(--light-yellow)
+
+  --ok: var(--dark-green)
+  --ok-hover: var(--green)
+  --ok-active: var(--darkest-green)
+  --ok-disabled: var(--light-green)
+
   --primary: var(--blue)
   --primary-hover: var(--dark-blue)
   --primary-active: var(--darkest-blue)
   --primary-disabled: var(--light-blue)
+
+  --neutral: var(--gray)
+  --neutral-hover: var(--dark-gray)
+  --neutral-active: var(--darkest-gray)
+  --neutral-disabled: var(--light-gray)
+
 
   --code: var(--primary)
 
@@ -116,10 +132,10 @@
 
 
 
-  --menu-background: #{$white}
-  --menu-hover: #{$white}
-  --menu-active: #{$white}
-  --menu-disabled: #{$white}
+  --menu-background: var(--white)
+  --menu-hover: var(--white)
+  --menu-active: var(--white)
+  --menu-disabled: var(--white)
 
 
   // font faces
@@ -165,7 +181,7 @@
   --fine-spacing-s: 6px
   --fine-spacing-xs: 4px
   --fine-spacing-xxs: 2px
-
+  --fine-spacing-0: 0px
 
   --corner-sharp: 0px
   --corner-s: 2px
