--- a/public/css/global.css
+++ b/public/css/global.css
@@ -39,6 +39,10 @@ table {
   table td, table th {
     vertical-align: top; }
 
+details summary::-webkit-details-marker {
+  display: none;
+  font-size: 0px; }
+
 @-moz-document url-prefix() {
   [layout-fill] {
     margin: 0; }
