--- a/src/_sass/global/core/resets.sass
+++ b/src/_sass/global/core/resets.sass
@@ -38,3 +38,8 @@ table
   border-collapse: collapse
   td, th
     vertical-align: top
+
+
+details summary::-webkit-details-marker
+  display: none
+  font-size: 0px
