--- a/src/_sass/solver.sass
+++ b/src/_sass/solver.sass
@@ -54,8 +54,8 @@
       -webkit-box-orient: vertical
 
   .CodeMirror-rightbar-text
-    color: #000
-    background: var(--yellow)
+    color: --var(--black)
+    background: transparent
     text-align: left
     padding: .4em .2em .4em .4em
     white-space: pre !important
