--- a/public/css/solver.css
+++ b/public/css/solver.css
@@ -49,8 +49,8 @@
     -webkit-box-orient: vertical; }
 
 .CodeMirror.cm-s-solver.CodeMirror-wrap .CodeMirror-rightbar-text {
-  color: #000;
-  background: var(--yellow);
+  color: --var(--black);
+  background: transparent;
   text-align: left;
   padding: .4em .2em .4em .4em;
   white-space: pre !important; }
