--- a/public/css/global.css
+++ b/public/css/global.css
@@ -9187,8 +9187,13 @@ small {
 
 pre, code {
   font-family: var(--font-family-monospace), "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  font-size: var(--font-s);
   color: var(--code); }
+
+pre {
+  font-size: var(--font-s); }
+
+b {
+  font-weight: var(--font-bold); }
 
 [type="content"] h1, .content h1 {
   margin-top: var(--text-spacing-xxl);
