--- a/src/_sass/global/common/typography.sass
+++ b/src/_sass/global/common/typography.sass
@@ -23,10 +23,13 @@ small
   font-size: var(--font-xs)
 pre, code
   font-family: var(--font-family-monospace), "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace
-  font-size: var(--font-s)
+
   color: var(--code)
+pre
+  font-size: var(--font-s)
 
-
+b
+  font-weight: var(--font-bold)
 
 // encapsulate "body" text in content type articles
 [type="content"], .content
