--- a/src/_sass/global/common/typography.sass
+++ b/src/_sass/global/common/typography.sass
@@ -24,7 +24,6 @@ small
 pre, code
   font-family: var(--font-family-monospace), "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace
 
-  color: var(--code)
 pre
   font-size: var(--font-s)
 
@@ -64,7 +63,9 @@ b
     background: var(--lightest-gray)
     padding: var(--text-spacing-s)
     border-radius: var(--corner-l)
+  pre, code
 
+    color: var(--code)
   ul
     list-style-type: disc
     ul
