--- a/public/css/global.css
+++ b/public/css/global.css
@@ -9186,8 +9186,7 @@ small {
   font-size: var(--font-xs); }
 
 pre, code {
-  font-family: var(--font-family-monospace), "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  color: var(--code); }
+  font-family: var(--font-family-monospace), "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace; }
 
 pre {
   font-size: var(--font-s); }
@@ -9231,6 +9230,9 @@ b {
   background: var(--lightest-gray);
   padding: var(--text-spacing-s);
   border-radius: var(--corner-l); }
+
+[type="content"] pre, [type="content"] code, .content pre, .content code {
+  color: var(--code); }
 
 [type="content"] ul, .content ul {
   list-style-type: disc; }
